engine/mono/Imgui/imgui.cs


        // ../../imgui/imgui.h:518
        [DllImport(Engine.Paths.Exe, EntryPoint = "?InputFloat2@ImGui@@YA_NPEBDQEAM0H@Z")]
        public static extern bool InputFloat2(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format,
            int flags = default
        );
        // overload
        public static bool InputFloat2(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v
        )
        {
            return InputFloat2(label, ref v, "%.3f");
        }

        // ../../imgui/imgui.h:519
        [DllImport(Engine.Paths.Exe, EntryPoint = "?InputFloat3@ImGui@@YA_NPEBDQEAM0H@Z")]
        public static extern bool InputFloat3(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format,
            int flags = default
        );
        // overload
        public static bool InputFloat3(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v
        )
        {
            return InputFloat3(label, ref v, "%.3f");
        }

        // ../../imgui/imgui.h:520
        [DllImport(Engine.Paths.Exe, EntryPoint = "?InputFloat4@ImGui@@YA_NPEBDQEAM0H@Z")]
        public static extern bool InputFloat4(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format,
            int flags = default
        );
        // overload
        public static bool InputFloat4(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v
        )
        {
            return InputFloat4(label, ref v, "%.3f");
        }

        // ../../imgui/imgui.h:521
        [DllImport(Engine.Paths.Exe, EntryPoint = "?InputInt@ImGui@@YA_NPEBDPEAHHHH@Z")]
        public static extern bool InputInt(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v,
            int step = 1,
            int step_fast = 100,
            int flags = default
        );

        // ../../imgui/imgui.h:522
        [DllImport(Engine.Paths.Exe, EntryPoint = "?InputInt2@ImGui@@YA_NPEBDQEAHH@Z")]
        public static extern bool InputInt2(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v,
            int flags = default
        );

        // ../../imgui/imgui.h:523
        [DllImport(Engine.Paths.Exe, EntryPoint = "?InputInt3@ImGui@@YA_NPEBDQEAHH@Z")]
        public static extern bool InputInt3(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v,
            int flags = default
        );

        // ../../imgui/imgui.h:524
        [DllImport(Engine.Paths.Exe, EntryPoint = "?InputInt4@ImGui@@YA_NPEBDQEAHH@Z")]
        public static extern bool InputInt4(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v,
            int flags = default
        );

        // ../../imgui/imgui.h:525
        [DllImport(Engine.Paths.Exe, EntryPoint = "?InputDouble@ImGui@@YA_NPEBDPEANNN0H@Z")]
        public static extern bool InputDouble(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref double v,
            double step,
            double step_fast,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format,
            int flags = default
        );
        // overload
        public static bool InputDouble(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref double v,
            double step = default,
            double step_fast = default
        )
        {
            return InputDouble(label, ref v, step, step_fast, "%.6f");
        }

        // ../../imgui/imgui.h:526
        [DllImport(Engine.Paths.Exe, EntryPoint = "?InputScalar@ImGui@@YA_NPEBDHPEAXPEBX20H@Z")]
        public static extern bool InputScalar(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            int data_type,
            IntPtr p_data,
            IntPtr p_step = default,
            IntPtr p_step_fast = default,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format = default,
            int flags = default
        );

        // ../../imgui/imgui.h:527
        [DllImport(Engine.Paths.Exe, EntryPoint = "?InputScalarN@ImGui@@YA_NPEBDHPEAXHPEBX20H@Z")]
        public static extern bool InputScalarN(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            int data_type,
            IntPtr p_data,
            int components,
            IntPtr p_step = default,
            IntPtr p_step_fast = default,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format = default,
            int flags = default
        );

        // ../../imgui/imgui.h:532
        [DllImport(Engine.Paths.Exe, EntryPoint = "?ColorEdit3@ImGui@@YA_NPEBDQEAMH@Z")]
        public static extern bool ColorEdit3(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float col,
            int flags = default
        );

        // ../../imgui/imgui.h:533
        [DllImport(Engine.Paths.Exe, EntryPoint = "?ColorEdit4@ImGui@@YA_NPEBDQEAMH@Z")]
        public static extern bool ColorEdit4(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float col,
            int flags = default
        );

        // ../../imgui/imgui.h:534
        [DllImport(Engine.Paths.Exe, EntryPoint = "?ColorPicker3@ImGui@@YA_NPEBDQEAMH@Z")]
        public static extern bool ColorPicker3(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float col,
            int flags = default
        );

        // ../../imgui/imgui.h:535
        [DllImport(Engine.Paths.Exe, EntryPoint = "?ColorPicker4@ImGui@@YA_NPEBDQEAMHPEBM@Z")]
        public static extern bool ColorPicker4(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float col,
            int flags = default,
            in float ref_col = default
        );

        // ../../imgui/imgui.h:536
        [DllImport(Engine.Paths.Exe, EntryPoint = "?ColorButton@ImGui@@YA_NPEBDAEBUImVec4@@HUImVec2@@@Z")]
        public static extern bool ColorButton(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string desc_id,
            in Vector4 col,
            int flags = default,
            Vector2 size = default
        );

        // ../../imgui/imgui.h:537
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SetColorEditOptions@ImGui@@YAXH@Z")]
        public static extern void SetColorEditOptions(
            int flags
        );

        // ../../imgui/imgui.h:541
        [DllImport(Engine.Paths.Exe, EntryPoint = "?TreeNode@ImGui@@YA_NPEBD@Z")]
        public static extern bool TreeNode(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label
        );

        // ../../imgui/imgui.h:542
        [DllImport(Engine.Paths.Exe, EntryPoint = "?TreeNode@ImGui@@YA_NPEBD0ZZ")]
        public static extern bool TreeNode(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string str_id,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt
        );

        // ../../imgui/imgui.h:543
        [DllImport(Engine.Paths.Exe, EntryPoint = "?TreeNode@ImGui@@YA_NPEBXPEBDZZ")]
        public static extern bool TreeNode(
            IntPtr ptr_id,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt
        );

        // ../../imgui/imgui.h:544
        [DllImport(Engine.Paths.Exe, EntryPoint = "?TreeNodeV@ImGui@@YA_NPEBD0PEAD@Z")]
        public static extern bool TreeNodeV(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string str_id,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt,
            ref sbyte args
        );

        // ../../imgui/imgui.h:545
        [DllImport(Engine.Paths.Exe, EntryPoint = "?TreeNodeV@ImGui@@YA_NPEBXPEBDPEAD@Z")]
        public static extern bool TreeNodeV(
            IntPtr ptr_id,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt,
            ref sbyte args
        );

        // ../../imgui/imgui.h:546
        [DllImport(Engine.Paths.Exe, EntryPoint = "?TreeNodeEx@ImGui@@YA_NPEBDH@Z")]
        public static extern bool TreeNodeEx(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            int flags = default
        );

        // ../../imgui/imgui.h:547
        [DllImport(Engine.Paths.Exe, EntryPoint = "?TreeNodeEx@ImGui@@YA_NPEBDH0ZZ")]
        public static extern bool TreeNodeEx(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string str_id,
            int flags,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt
        );

        // ../../imgui/imgui.h:548
        [DllImport(Engine.Paths.Exe, EntryPoint = "?TreeNodeEx@ImGui@@YA_NPEBXHPEBDZZ")]
        public static extern bool TreeNodeEx(
            IntPtr ptr_id,
            int flags,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt
        );

        // ../../imgui/imgui.h:549
        [DllImport(Engine.Paths.Exe, EntryPoint = "?TreeNodeExV@ImGui@@YA_NPEBDH0PEAD@Z")]
        public static extern bool TreeNodeExV(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string str_id,
            int flags,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt,
            ref sbyte args
        );

        // ../../imgui/imgui.h:550
        [DllImport(Engine.Paths.Exe, EntryPoint = "?TreeNodeExV@ImGui@@YA_NPEBXHPEBDPEAD@Z")]
        public static extern bool TreeNodeExV(
            IntPtr ptr_id,
            int flags,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt,
            ref sbyte args
        );

        // ../../imgui/imgui.h:551
        [DllImport(Engine.Paths.Exe, EntryPoint = "?TreePush@ImGui@@YAXPEBD@Z")]
        public static extern void TreePush(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string str_id
        );

        // ../../imgui/imgui.h:552
        [DllImport(Engine.Paths.Exe, EntryPoint = "?TreePush@ImGui@@YAXPEBX@Z")]
        public static extern void TreePush(
            IntPtr ptr_id = default
        );

        // ../../imgui/imgui.h:553
        [DllImport(Engine.Paths.Exe, EntryPoint = "?TreePop@ImGui@@YAXXZ")]
        public static extern void TreePop(
        );

        // ../../imgui/imgui.h:554
        [DllImport(Engine.Paths.Exe, EntryPoint = "?GetTreeNodeToLabelSpacing@ImGui@@YAMXZ")]
        public static extern float GetTreeNodeToLabelSpacing(
        );

        // ../../imgui/imgui.h:555
        [DllImport(Engine.Paths.Exe, EntryPoint = "?CollapsingHeader@ImGui@@YA_NPEBDH@Z")]
        public static extern bool CollapsingHeader(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            int flags = default
        );

        // ../../imgui/imgui.h:556
        [DllImport(Engine.Paths.Exe, EntryPoint = "?CollapsingHeader@ImGui@@YA_NPEBDPEA_NH@Z")]
        public static extern bool CollapsingHeader(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref bool p_open,
            int flags = default
        );

        // ../../imgui/imgui.h:557
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SetNextItemOpen@ImGui@@YAX_NH@Z")]
        public static extern void SetNextItemOpen(
            bool is_open,
            int cond = default
        );

        // ../../imgui/imgui.h:562
        [DllImport(Engine.Paths.Exe, EntryPoint = "?Selectable@ImGui@@YA_NPEBD_NHAEBUImVec2@@@Z")]
        public static extern bool Selectable(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            bool selected = default,
            int flags = default,
            in Vector2 size = default
        );
